# resume-builder

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml
backend/: Dockerfile  __init__.py  config.py  database.py  main.py
backend/models/: __init__.py  profile.py  resume.py  sections.py
backend/routers/: __init__.py  compile.py  profiles.py  resumes.py
backend/services/: __init__.py  escape_latex.py  latex_compiler.py  template_engine.py
frontend/: Dockerfile  __init__.py  app.py  config.py
frontend/components/: __init__.py  education_section.py  experience_section.py  header_section.py  preview_panel.py  projects_section.py  skills_section.py
frontend/pages/: editor.py  profile_select.py
frontend/utils/: api_client.py  state_manager.py
